# OOP_LAB04

./: README.md
laba4/: CMakeLists.txt  main.cpp
laba4/include/: array.h  figure.h  pentagon.h  point.h  rhombus.h  trapezoid.h
laba4/tests/: tests.cpp
